--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="dist/style.css">
 
     <title>Product preview card component</title>
 
